Download button and fixing scrollbar in mapstore preview. Close #2.

--- a/ckanext/mapstore/theme/public/css/mapstore.css
+++ b/ckanext/mapstore/theme/public/css/mapstore.css
@@ -6,6 +6,10 @@
 	margin: 0 auto;
 }
 
+.ckanext-datapreview > iframe {
+    min-height: 550px;
+}
+
 .show{
 -moz-border-bottom-colors: none;
 -moz-border-left-colors: none;
@@ -34,7 +38,7 @@ vertical-align: middle;
 
 .show-primary {
   background-color: #505050;
-  /*background-image: linear-gradient(to bottom, #30778D, #085871);*/
+  background-image: linear-gradient(to bottom, #30778D, #085871);
   background-repeat: repeat-x;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   color: #FFFFFF;
